@@ -9,25 +9,23 @@ Auto-updater and launcher for your distributed applications. Built on top of Jav
 
 
 
-### Screenshots
+## Screenshots
 
-#### JavaFX
+### JavaFX
+
+<sup>Downloads 3 files then launches `hello-world.jar`</sup>
 [![javafx][1]][1]
 
-#### Headless
+### Headless
+<sup>Downloads 3 files then launches `hello-world.jar`. You can see that subsequent runs won't download again.</sup>
 [![headless][2]][2]
 
 
-### Overview
+## Overview
 
 The UpToDate Project is the first auto-update and launcher framework completely compatible with Java 9. Easily host your application
 files anywhere in the cloud accesible via a URL (even Google Drive, Dropbox, Amazon S3, or Maven Central)
 and you can synchronize them with all your distributed applications.
-
-You can either do a preliminary check-for-updates and always launch the latest version on the current VM, or you might let the user do some action
-that triggers an update after your application has been launched. In the latter case, the existing files are locked and thus cannot be
-updated outright. UpToDate provides a mechanism for downloading your new files into some temporary directory and finalize them upon
-restart.
 
 UpToDate has made security its priority. Signing your files is as easy as providing your private key to the framework on your dev machine,
 and it will do the job itself. On the client side, you should load the public key into the framework and it will automatically verify 
@@ -36,58 +34,38 @@ each and every downloaded file. It will forcefully reject any files without or w
 As a side feature, UpToDate allows you to make your application running as a single instance. Any new instance of
 the application would pass its command-line arguments to the existing running instance and shut down.
 
-Although this has been designed with JavaFX in mind, we went out of the way to make it work on every environment.
-There are not even one reference to JavaFX in the code, but every change to the update/launch state will trigger a callback.
+## Installation
 
-### Using this Project
+Download the JAR file from the latest [release](https://github.com/uptodate-project/uptodate/releases).
 
-At the core, is the `Configuration` class. Here are some useful methods:
+You can use it as a regular dependency, or you may run it as a runnable JAR file in modular mode. In the latter case you must also provide a [`Delegate`](https://github.com/uptodate-project/uptodate/wiki#handlers) in the module-path.
 
-|Method|Purpose|
-|---|---|
-|`read(Reader)`| Read a configuration from a stream, in xml.|
-|`write(Writer)`| Write the configuration to an xml file.|
-|`update()`|Check if any file is outdated and update it.|
-|`update(Certificate)`|Same as above but will check the signature before saving the file.|
-|`updateTemp(Path)`|Updates are saved in a temporary directory. Finalize them with `UpToDate::finalizeUpdates(Path)`|
-|`updateTemp(Path,Certificate)`|Same, but with signature verification.|
-|`launch()`|Launches the files listed in the configuration dynamically on the same Virtual Machine.|
-|`launch(List<String>)`|Same as above but will pass command-line arguments to the newly launched modules.|
+To run it as a runnable JAR as a module:
 
-You could create a `Configuration` in code with its builder, by calling `Configuration::withBase` or `Configuration::absolute`.
-
-For a complete reference, please refer to the [wiki](https://github.com/uptodate-project/uptodate/wiki).
-
-### Limitations
-
-This Project loads modules on a new `ModuleLayer` when `Configuration::launch` is called. This implies 2 limitations.
-
-- `Class::forName` will not always locate classes loaded in the new layer. Using reflection will work as follows:
-  ```java
-  Class<?> clazz = moduleLayer.findLoader("mymodule").loadClass("com.example.MyClass");
-  ```
-  `moduleLayer` is injected into `LaunchContext` when the launching is complete.
+```powershell
+~$> java --module-path . --module uptodate
+```
+Or in shorthand:
+```powershell
+~$> java -p . -m uptodate
+```
   
-  Also note that JavaFX's `Application.launch(String... args)` uses reflection to get the caller class. In order
-  to make it work, call the other overload `Application.launch(Class<? extends Application> clazz, String... args)`.
-  
-- Layers cannot load system modules into the module graph, regerdless of its module descriptor. For simplicity the boot layer
-  automatically resolves all modules in the `java`, `javax`, and `javafx` namespace.
-  
-  If you want to use system modules in the `jdk` namespace (as `jdk.incubator.httpclient`) you should either 
-  require them in one of the service handlers (more info in the [wiki](https://github.com/uptodate-project/uptodate/wiki#handlers))
-  or start the VM with `--add-modules jdk.icubator.httpsclient`,
-  or -- to always get it right -- `--add-modules ALL-SYSTEM`.
-  
+## Documentation
 
-### Attribution
+Please refer to the [wiki](https://github.com/uptodate-project/uptodate/wiki) for full documentation.
+
+## Limitations
+
+As this projects builds on top of the Module System we are limited to what it has to offer. Please refer to the [wiki](https://github.com/uptodate-project/uptodate/wiki#limitations) for a comprehensive list of limitations.
+
+## Attribution
 
 This project was highly influenced by [edvin/fxlauncher](https://github.com/edvin/fxlauncher/). Thanks for the insights
 that made this possible.
 
-### License
+## License
 
-This project is licensed under the Apache Software License 2.0
+This project is licensed under the [Apache Software License 2.0](http://www.apache.org/licenses/LICENSE-2.0)
 
 
   [1]: https://i.stack.imgur.com/bi9gL.gif
